--- a/mdl-template-dashboard/styles.css
+++ b/mdl-template-dashboard/styles.css
@@ -17,10 +17,13 @@
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
+
 .demo-avatar {
-  width: 48px;
-  height: 48px;
+  width: 50px;
+  height: 50px;
   border-radius: 24px;
+  padding-bottom: 20px;
+  align-self: center;
 }
 .demo-layout .mdl-layout__header .mdl-layout__drawer-button {
   color: rgba(0, 0, 0, 0.54);
@@ -74,6 +77,7 @@ html, body {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  padding-left: 40px;
 }
 
 .demo-navigation {
@@ -217,5 +221,5 @@ _:-ms-input-placeholder, :root .demo-graph {
 
 .mdl-layout__content{
   text-align: center;
-  padding-top: 50px;
+  padding-top: 30px;
 }
