--- a/weather/templates/welcome.html
+++ b/weather/templates/welcome.html
@@ -14,7 +14,7 @@
       <input id="time" type="time" name="time" value="{{time}}">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <div class="autocomplete" style="width:300px;">
-        <input id="location" type="text" name="location" value="{{location}}" placeholder="Location">
+        <input id="location" type="text" name="location" value="{{location}}" placeholder="Location" autocomplete="off">
       </div>
   <input type="submit" value="Go!">
 </form>
