--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Weather forecast</title>
-      <link rel= "stylesheet" type="text/css" href="style/style.css">
+      <link rel= "stylesheet" type="text/css" href="/style/style.css">
   </head>
   <body>
     <h1>Welcome to weather forecast!</h1>
-    <form id="weather-form" method="post" action = "/">
+    <form id="weather-form" method="post" action = "/weather">
     <!-- <form id="weather-form" method="post" onSubmit="return onSubmit()"> -->
       For what date(YYY-MM-DD)<br>
       <input id="date" type="date" name="date" value="{{date}}">
