--- a/templates/website.html
+++ b/templates/website.html
@@ -34,7 +34,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel= "stylesheet" href="/style/website.css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch&display=swap" rel="stylesheet">
+
+
     <style>
     #view-source {
       position: fixed;
@@ -55,11 +58,11 @@
           <div class="mdl-layout-spacer"></div>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
             <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
-              <i class="material-icons">search</i>
+              <i class="material-icons white600">search</i>
             </label>
             <div class="mdl-textfield__expandable-holder">
               <input class="mdl-textfield__input" type="text" id="search">
-              <label class="mdl-textfield__label" for="search">Enter your query...</label>
+              <label class="mdl-textfield__label" for="search">Search ...</label>
             </div>
           </div>
           <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
@@ -82,20 +85,18 @@
         </header>
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">wb_sunny</i>Weather Forecast</a>
+          <a class="mdl-navigation__link" href="/weather"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">wb_sunny</i>Weather Forecast</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_taxi</i>Taxi Availability</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">traffic</i>Traffic Images</a>
+          <a class="mdl-navigation__link" href="/traffic"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">traffic</i>Traffic Images</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_car</i>Carpark</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_bus</i>Public Transport</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">contact_support</i>Our Partners</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">share</i>Social Media</a>
+          <a class="mdl-navigation__link" href="/sm"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">share</i>Social Media</a>
           <div class="mdl-layout-spacer"></div>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
         </nav>
       </div>
-      <main class="mdl-layout__content mdl-color--grey-100">
-        <img src ="https://amp.businessinsider.com/images/59f0bc253e9d2514048b4d6c-750-563.jpg" style = "width="750" height="600"">
-      </main>
+      <main class="mdl-layout__content mdl-color--grey-100"><iframe src="https://feed.mikle.com/widget/v2/111224/" height="702px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe></main>
     </div>
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: -1000px; height: -1000px;">
         <defs>
