--- a/Bus Timings/templates/bustimings.html
+++ b/Bus Timings/templates/bustimings.html
@@ -5,7 +5,9 @@
       <link rel= "stylesheet" type="text/css" href="style/style.css">
   </head>
   <body>
-    <h1>Welcome to Bus Timings!</h1>
+    <h1>Welcome to Public Transport update!</h1>
+    <h2>Train Service Update:</h2>
+    <h2>{{train_message}}</h2>
     <form id="weather-form" method="post" action = "/">
     <!-- <form id="weather-form" method="post" onSubmit="return onSubmit()"> -->
       Bus Stop ID<br>
