--- a/templates/socialmedia.html
+++ b/templates/socialmedia.html
@@ -20,7 +20,9 @@
       <br>
       <br>
       <img src="https://media2.giphy.com/media/3oEdv82AENw0GKzGIE/giphy.gif" height="auto" width="400px" >
-      <img src="https://i.redd.it/gr9b0nb2mrvz.jpg" height="auto" width="400px">
+      <img src="https://i.redd.it/gr9b0nb2mrvz.jpg" height="300" width="auto">
+      <img src="https://media1.tenor.com/images/4710f7baa4858b2dafa62ce329672b25/tenor.gif?itemid=13728541">
+      <img src="https://media.giphy.com/media/8hSPD2Yn4PuUM/giphy.gif" height="300px" width="auto">
     </div>
 
   </body>
