--- a/templates/traffic.html
+++ b/templates/traffic.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>bus timing</title>
-      <link rel= "stylesheet" type="text/css" href="style/style.css">
+      <link rel= "stylesheet" type="text/css" href="style/inc.css">
   </head>
   <body>
     <h1>Welcome to Traffic News!</h1>
