--- a/templates/bustimings.html
+++ b/templates/bustimings.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>bus timing</title>
-      <link rel= "stylesheet" type="text/css" href="style/style.css">
+      <link rel= "stylesheet" type="text/css" href="style/bus.css">
   </head>
   <body>
     <h1>Welcome to Public Transport update!</h1>
     <h2>Train Service Update:</h2>
     <h2>{{train_message}}</h2>
-    <form id="weather-form" method="post" action = "/">
+    <form id="weather-form" method="post" action = "/bus">
     <!-- <form id="weather-form" method="post" onSubmit="return onSubmit()"> -->
       Bus Stop ID<br>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,6 +28,6 @@
 {% endfor %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/stops.js" type="text/javascript" ></script>
-<script src="js/function.js" type="text/javascript" ></script>
+<script src="js/bus.js" type="text/javascript" ></script>
 </body>
 </html>
