--- a/templates/website.html
+++ b/templates/website.html
@@ -86,10 +86,10 @@
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
           <a class="mdl-navigation__link" href="/weather"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">wb_sunny</i>Weather Forecast</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_taxi</i>Taxi Availability</a>
+          <a class="mdl-navigation__link" href="/incident"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_taxi</i>Live Traffic News</a>
           <a class="mdl-navigation__link" href="/traffic"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">traffic</i>Traffic Images</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_car</i>Carpark</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_bus</i>Public Transport</a>
+          <a class="mdl-navigation__link" href="/bus"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_bus</i>Public Transport</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">contact_support</i>Our Partners</a>
           <a class="mdl-navigation__link" href="/sm"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">share</i>Social Media</a>
           <div class="mdl-layout-spacer"></div>
