--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-  <link rel= "stylesheet" href="/style/Homepage.css">
+  <link rel= "stylesheet" href="/style/homepage.css">
 
 <style>
 body,h1 {font-family: "Raleway", sans-serif}
