--- a/style/car.css
+++ b/style/car.css
@@ -1,6 +1,37 @@
 * {
 box-sizing: border-box;
 }
+h1 {
+  font-family: 'B612 Mono', monospace;
+  text-align: center;
+  font-size: 45px;
+  color: #CBCBCB;
+  text-shadow: 3px 3px #000000;
+}
+p {
+  font-size: 20px;
+
+}
+.lol {
+  text-align: center;
+  padding-right: 100px;
+  font-size: 18px;
+}
+.goo {
+  height: 60px;
+  width: 62px;
+  box-shadow: 2px 2px 2px #0048B7;
+}
+.autocomplete {
+  height: 60px;
+  box-shadow: 2px 2px 2px #000000;
+}
+#carparkName {
+  height: 60px;
+}
+form {
+  padding-left: 460px;
+}
 body {
 font: 16px Arial;
 }
@@ -49,4 +80,8 @@ background-color: #e9e9e9;
 .autocomplete-active {
 background-color: DodgerBlue !important;
 color: #ffffff;
+}
+html {
+  background-image: url(https://previews.123rf.com/images/solodkayamari/solodkayamari1712/solodkayamari171200041/90868068-seamless-pattern-with-hand-drawn-cute-car-cartoon-cars-road-sign-zebra-crossing-perfect-for-kids-fab.jpg);
+  background-size: 1000px 700px;
 }
