--- a/templates/carpark.html
+++ b/templates/carpark.html
@@ -2,24 +2,28 @@
 <html>
   <head>
     <title>bus timing</title>
-      <link rel= "stylesheet" type="text/css" href="style/style.css">
+      <link rel= "stylesheet" type="text/css" href="style/car.css">
+      <link href="https://fonts.googleapis.com/css?family=B612+Mono&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <h1>Welcome to CarParks!</h1>
-    <form id="carpark-form" method="post" action = "/">
+    <form id="carpark-form" method="post" action = "/car">
     <!-- <form id="weather-form" method="post" onSubmit="return onSubmit()"> -->
-      Carpark name<br>
+      <p>Carpark name: </p><br>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <div class="autocomplete" style="width:300px;">
         <input id="carparkName" type="text" name="carpark" value="{{parkName}}" placeholder="Carpark Name" autocomplete="off">
 
       </div>
-  <input type="submit" value="Go!">
+  <input class="goo" type="submit" value="Go!">
 </form>
-<div>
-  {{content}}{{lots}} 
+<br>
+<div class="lol">
+  {{content}}{{lots}}
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/carparks.js" type="text/javascript" ></script>
-<script src="js/function.js" type="text/javascript" ></script>
+<script src="js/car.js" type="text/javascript" ></script>
 </body>
 </html>
