--- a/templates/website.html
+++ b/templates/website.html
@@ -88,12 +88,12 @@
           <a class="mdl-navigation__link" href="/weather"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">wb_sunny</i>Weather Forecast</a>
           <a class="mdl-navigation__link" href="/incident"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_taxi</i>Live Traffic News</a>
           <a class="mdl-navigation__link" href="/traffic"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">traffic</i>Traffic Images</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_car</i>Carpark</a>
+          <a class="mdl-navigation__link" href="/car"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_car</i>Carpark</a>
           <a class="mdl-navigation__link" href="/bus"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_bus</i>Public Transport</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">contact_support</i>Our Partners</a>
           <a class="mdl-navigation__link" href="/sm"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">share</i>Social Media</a>
           <div class="mdl-layout-spacer"></div>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
+          <a class="mdl-navigation__link" href="/hi"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
         </nav>
       </div>
       <main class="mdl-layout__content mdl-color--grey-100"><iframe src="https://feed.mikle.com/widget/v2/111224/" height="702px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe></main>
@@ -111,7 +111,7 @@
         </defs>
       </svg>
 
-      <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/dashboard/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">Fund Tropos</a>
+      <a href="https://cdn.wccftech.com/wp-content/uploads/2018/06/google-logo.jpg" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">Fund Tropos</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
