--- a/style/bus.css
+++ b/style/bus.css
@@ -16,13 +16,14 @@ padding: 10px;
 font-size: 16px;
 }
 input[type=text] {
-background-color: #f1f1f1;
+background-color: lightgrey;
 width: 100%;
 }
 input[type=submit] {
-background-color: DodgerBlue;
+background-color: red;
 color: #fff;
 cursor: pointer;
+border-radius: 50%;
 }
 .autocomplete-items {
 position: absolute;
@@ -49,4 +50,12 @@ background-color: #e9e9e9;
 .autocomplete-active {
 background-color: DodgerBlue !important;
 color: #ffffff;
+}
+
+html{
+  background: url(https://i.gifer.com/Viek.gif) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
