--- a/style/bus.css
+++ b/style/bus.css
@@ -21,9 +21,10 @@ width: 100%;
 }
 input[type=submit] {
 background-color: red;
-color: #fff;
+color: white;
 cursor: pointer;
-border-radius: 50%;
+border-radius: 100%;
+font-family: 'Righteous', cursive;
 }
 .autocomplete-items {
 position: absolute;
@@ -35,27 +36,69 @@ z-index: 99;
 top: 100%;
 left: 0;
 right: 0;
+font-family: 'Righteous', cursive;
+
 }
 .autocomplete-items div {
 padding: 10px;
 cursor: pointer;
 background-color: #fff;
 border-bottom: 1px solid #d4d4d4;
+font-family: 'Righteous', cursive;
+
 }
 /*when hovering an item:*/
 .autocomplete-items div:hover {
 background-color: #e9e9e9;
+font-family: 'Righteous', cursive;
+
 }
 /*when navigating through the items using the arrow keys:*/
 .autocomplete-active {
 background-color: DodgerBlue !important;
 color: #ffffff;
+font-family: 'Righteous', cursive;
 }
 
 html{
-  background: url(https://i.gifer.com/Viek.gif) no-repeat center center fixed;
+  background: url(https://media.giphy.com/media/DktWAlctlLFHW/giphy.gif) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  font-family: 'Righteous', cursive;
+}
+
+h1{
+  font-family: 'Righteous', cursive;
+  font-size: 50px;
+  text-align: center;
+  color: white;
+}
+
+h2{
+  font-family: 'Righteous', cursive;
+  font-size: 20px;
+  text-align: center;
+  color: black;
+}
+
+#weather-form{
+  text-align: center;
+}
+
+#stopName{
+  font-family: 'Righteous', cursive;
+  color: black;
+}
+
+.result{
+  text-align: center;
+  font-family: 'Roboto Slab', serif;
+  font-size: 20px;
+  color: black;
+}
+
+b{
+  color: white;
 }
