--- a/templates/bustimings.html
+++ b/templates/bustimings.html
@@ -3,29 +3,37 @@
   <head>
     <title>bus timing</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Righteous|Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+
       <link rel= "stylesheet" type="text/css" href="style/bus.css">
   </head>
   <body>
-    <h1>Welcome to Public Transport update!</h1>
-    <h2>Train Service Update:</h2> <h2>{{train_message}}</h2>
+    <h1>Public Transport Updates & Bus Timings!</h1>
+    <h2>Train Service Update: {{train_message}}</h2>
+    <br>
+    <br>
     <form id="weather-form" method="post" action = "/bus">
     <!-- <form id="weather-form" method="post" onSubmit="return onSubmit()"> -->
-      Bus Stop ID<br>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <div class="autocomplete" style="width:300px;">
+      <div class="autocomplete" style="width:500px;">
         <input id="stopName" type="text" name="stopid" value="{{stopid}}" placeholder="Bus Stop Name" autocomplete="off">
       </div>
       <input type="submit" value="Go!">
+      <br>
+      <br>
 
 </form>
 
 {% for x in range(busno|length) %}
-<div>
+<div class="result">
   <span>
-  <b>{{busno[x]}}</b>
+  <b><i>{{busno[x]}}</b></i>
   </span>
   {{timings[x]}}
 </div>
+<br>
+<br>
 {% endfor %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/stops.js" type="text/javascript" ></script>
