--- a/style/inc.css
+++ b/style/inc.css
@@ -22,12 +22,20 @@ a {
   text-shadow: 2px 2px #000000;
 }
 .words {
-  padding-left: 260px;
-  color: white;
-  text-shadow: 3px 3px #000000;
-
+  color: orange;
+  font-family: 'Oswald', sans-serif;
+  font-size: 30px;
+  text-align: center;
 }
 html {
   background-image: url(https://wallpaperstock.net/wallpapers/thumbs1/44760wide.jpg);
-  background-size: 1450px 850px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.nba{
+  font-family: 'Open Sans', sans-serif;
+
 }
