--- a/templates/website.html
+++ b/templates/website.html
@@ -21,7 +21,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>For your lifestyle</title>
+    <title>Tropos Dashboard</title>
 
 
     <link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/detoxification/96/lifestyle-health-healthy-fitness-diet-exercise-512.png">
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
     <link rel= "stylesheet" href="/style/website.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet">
 
 
     <style>
@@ -66,20 +67,16 @@
             </div>
           </div>
           <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
-            <i class="material-icons">more_vert</i>
+
           </button>
-          <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
-            <li class="mdl-menu__item">About</li>
-            <li class="mdl-menu__item">Contact</li>
-            <li class="mdl-menu__item">Legal information</li>
-          </ul>
+
         </div>
       </header>
       <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
           <img src="http://pluspng.com/img-png/google-logo-png-open-2000.png" class="demo-avatar">
           <div class="demo-avatar-dropdown">
-            <span>Welcome To Tropos</span>
+            <span>Dashboard</span>
             <div class="mdl-layout-spacer"></div>
           </div>
         </header>
@@ -90,7 +87,7 @@
           <a class="mdl-navigation__link" href="/traffic"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">traffic</i>Traffic Images</a>
           <a class="mdl-navigation__link" href="/car"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_car</i>Carpark</a>
           <a class="mdl-navigation__link" href="/bus"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">directions_bus</i>Public Transport</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">contact_support</i>Our Partners</a>
+          <a class="mdl-navigation__link" href="https://taxirouter.sg/"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">airplanemode_active</i>Taxi Avaliability</a>
           <a class="mdl-navigation__link" href="/sm"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">share</i>Social Media</a>
           <div class="mdl-layout-spacer"></div>
           <a class="mdl-navigation__link" href="/hi"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
