--- a/style/car.css
+++ b/style/car.css
@@ -2,25 +2,28 @@
 box-sizing: border-box;
 }
 h1 {
-  font-family: 'B612 Mono', monospace;
   text-align: center;
-  font-size: 45px;
-  color: #CBCBCB;
-  text-shadow: 3px 3px #000000;
+  font-size: 55px;
+  color: white;
+  font-family: 'Love Ya Like A Sister', cursive;
+
+
 }
 p {
-  font-size: 20px;
+  font-size: 24px;
 
 }
 .lol {
   text-align: center;
   padding-right: 100px;
-  font-size: 18px;
+  font-size: 20px;
+  font-family: 'Comfortaa', cursive;
 }
 .goo {
   height: 60px;
   width: 62px;
   box-shadow: 2px 2px 2px #0048B7;
+
 }
 .autocomplete {
   height: 60px;
@@ -29,8 +32,13 @@ p {
 #carparkName {
   height: 60px;
 }
+#lot {
+  color: white;
+  font-size: 27px;
+}
 form {
-  padding-left: 460px;
+text-align: center;
+padding-top: 100px;
 }
 body {
 font: 16px Arial;
@@ -40,6 +48,7 @@ font: 16px Arial;
 position: relative;
 display: inline-block;
 }
+
 input {
 border: 1px solid transparent;
 background-color: #f1f1f1;
@@ -49,11 +58,16 @@ font-size: 16px;
 input[type=text] {
 background-color: #f1f1f1;
 width: 100%;
+font-size: 20px;
+font-family: 'Comfortaa', cursive;
 }
 input[type=submit] {
-background-color: DodgerBlue;
-color: #fff;
+background-color: orange;
+color: white;
 cursor: pointer;
+font-size: 22px;
+font-family: 'Comfortaa', cursive;
+
 }
 .autocomplete-items {
 position: absolute;
@@ -65,6 +79,8 @@ z-index: 99;
 top: 100%;
 left: 0;
 right: 0;
+font-family: 'Comfortaa', cursive;
+
 }
 .autocomplete-items div {
 padding: 10px;
@@ -82,6 +98,9 @@ background-color: DodgerBlue !important;
 color: #ffffff;
 }
 html {
-  background-image: url(https://previews.123rf.com/images/solodkayamari/solodkayamari1712/solodkayamari171200041/90868068-seamless-pattern-with-hand-drawn-cute-car-cartoon-cars-road-sign-zebra-crossing-perfect-for-kids-fab.jpg);
-  background-size: 1000px 700px;
+  background-image: url(https://i.pinimg.com/originals/2d/f0/f6/2df0f68ddd3792fe916e0c7d317fa5f8.gif);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
