--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -3,16 +3,15 @@
   <head>
     <title>Weather forecast</title>
       <link rel= "stylesheet" type="text/css" href="/style/style.css">
-      <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Mali&display=swap" rel="stylesheet">
 
   </head>
   <body>
     <h1>Welcome to Weather Forecast</h1>
     <form id="weather-form" method="post" action = "/weather">
     <!-- <form id="weather-form" method="post" onSubmit="return onSubmit()"> -->
-      <div class="uwu">For what date(YYYY-MM-DD)</div>
       <input id="date" type="date" name="date" value="{{date}}">
-      <input id="time" type="time" name="time" value="{{time}}"> What time(Ex.23:59)
+      <input id="time" type="time" name="time" value="{{time}}"> 
       <br>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <div class="autocomplete" style="width:300px;">
@@ -21,7 +20,9 @@
       </div>
   <input type="submit" value="Go!">
 </form>
-<div>
+<br>
+<br>
+<div class="ww">
   {{forecast}}
 </div>
 <script src="js/function.js" type="text/javascript" ></script>
